third_party/move/move-compiler-v2/tests/checking/typing/type_variable_join_threaded_pack_invalid.exp

Diagnostics:
error: expected `bool` but found `integer`
   ┌─ tests/checking/typing/type_variable_join_threaded_pack_invalid.move:39:32
   │
39 │         Container::put(&mut v, 0);
   │                                ^
